NAS4Free 11.0.0.3 - Sayyadina
-----------------------------
Changes:
- Upgrade to FreeBSD 11.0-RELEASE-P2.
- Change XMD driver has been replaced for MD.
- Upgrade virtualbox-ose to 5.1.8.
- Upgrade sudo to 1.8.18p1.
- Upgrade nano to 2.7.1.

Fixes:


Permanent restrictions:
- No more x86 versions of NAS4Free 11 series will be made, 32-bits users need 10.3 than.
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- AFP shares with TimeMachine support are limited to max. 4 shares.
- Tool iperf3 is not backwards compatible with iperf2.x. you must upgrade your client.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share
- Need to write an online-test procedure

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.
