@@ -31,125 +31,185 @@
 	of the authors and should not be interpreted as representing official policies,
 	either expressed or implied, of the NAS4Free Project.
 */
-require("auth.inc");
-require("guiconfig.inc");
+require 'auth.inc';
+require 'guiconfig.inc';
 
-if (isset($_GET['id']))
-	$id = $_GET['id'];
-if (isset($_POST['id']))
-	$id = $_POST['id'];
+$sphere_scriptname = basename(__FILE__);
+$sphere_header = 'Location: '.$sphere_scriptname;
+$sphere_header_parent = 'Location: system_rc.php';
+$sphere_notifier = 'rc';
+$sphere_array = [];
+$sphere_record = [];
+$prerequisites_ok = true;
 
-if (isset($_GET['type']))
-	$type = $_GET['type'];
-if (isset($_POST['type']))
-	$type = $_POST['type'];
-
-$pgtitle = array(gtext("System"), gtext("Advanced"), gtext("Command Scripts"), isset($id) ? gtext("Edit") : gtext("Add"));
-
-if (!isset($config['rc']['preinit']['cmd']) || !is_array($config['rc']['preinit']['cmd']))
-	$config['rc']['preinit']['cmd'] = array();
-
-if (!isset($config['rc']['postinit']['cmd']) || !is_array($config['rc']['postinit']['cmd']))
-	$config['rc']['postinit']['cmd'] = array();
-
-if (!isset($config['rc']['shutdown']['cmd']) || !is_array($config['rc']['shutdown']['cmd']))
-	$config['rc']['shutdown']['cmd'] = array();
-
-if (isset($id) && isset($type)) {
-	$pconfig['type'] = $type;
-	switch($pconfig['type']) {
-		case "PREINIT":
-			$pconfig['command'] = $config['rc']['preinit']['cmd'][$id];
-			break;
-		case "POSTINIT":
-			$pconfig['command'] = $config['rc']['postinit']['cmd'][$id];
-			break;
-		case "SHUTDOWN":
-			$pconfig['command'] = $config['rc']['shutdown']['cmd'][$id];
-			break;
-	}
-} else {
-	$pconfig['type'] = NULL;
-	$pconfig['command'] = "";
-}
-
-if ($_POST) {
-	unset($input_errors);
-	$pconfig = $_POST;
-
-	if (isset($_POST['Cancel']) && $_POST['Cancel']) {
-		header("Location: system_rc.php");
+$mode_page = ($_POST) ? PAGE_MODE_POST : (($_GET) ? PAGE_MODE_EDIT : PAGE_MODE_ADD); // detect page mode
+if (PAGE_MODE_POST == $mode_page) { // POST is Cancel or not Submit => cleanup
+	if ((isset($_POST['Cancel']) && $_POST['Cancel']) || !(isset($_POST['Submit']) && $_POST['Submit'])) {
+		header($sphere_header_parent);
 		exit;
 	}
+}
 
-	// Input validation.
-	$reqdfields = explode(" ", "command type");
-	$reqdfieldsn = array(gtext("Command"), gtext("Type"));
-	$reqdfieldst = explode(" ", "string string");
+if ((PAGE_MODE_POST == $mode_page) && isset($_POST['uuid']) && is_uuid_v4($_POST['uuid'])) {
+	$sphere_record['uuid'] = $_POST['uuid'];
+} else {
+	if ((PAGE_MODE_EDIT == $mode_page) && isset($_GET['uuid']) && is_uuid_v4($_GET['uuid'])) {
+		$sphere_record['uuid'] = $_GET['uuid'];
+	} else {
+		$mode_page = PAGE_MODE_ADD; // Force ADD
+		$sphere_record['uuid'] = uuid();
+	}
+}
 
-	do_input_validation($_POST, $reqdfields, $reqdfieldsn, $input_errors);
-	do_input_validation_type($_POST, $reqdfields, $reqdfieldsn, $reqdfieldst, $input_errors);
+if (!(isset($config['rc']['param']) && is_array($config['rc']['param']))) {
+	$config['rc']['param'] = [];
+}
+$sphere_array = &$config['rc']['param'];
 
-	if (empty($input_errors)) {
-		switch($_POST['type']) {
-			case "PREINIT":
-				$a_cmd = &$config['rc']['preinit']['cmd'];
+$index = array_search_ex($sphere_record['uuid'], $sphere_array, 'uuid'); // find index of uuid
+$mode_updatenotify = updatenotify_get_mode($sphere_notifier, $sphere_record['uuid']); // get updatenotify mode for uuid
+$mode_record = RECORD_ERROR;
+if (false !== $index) { // uuid found
+	if ((PAGE_MODE_POST == $mode_page || (PAGE_MODE_EDIT == $mode_page))) { // POST or EDIT
+		switch ($mode_updatenotify) {
+			case UPDATENOTIFY_MODE_NEW:
+				$mode_record = RECORD_NEW_MODIFY;
 				break;
-			case "POSTINIT":
-				$a_cmd = &$config['rc']['postinit']['cmd'];
-				break;
-			case "SHUTDOWN":
-				$a_cmd = &$config['rc']['shutdown']['cmd'];
+			case UPDATENOTIFY_MODE_MODIFIED:
+			case UPDATENOTIFY_MODE_UNKNOWN:
+				$mode_record = RECORD_MODIFY;
 				break;
 		}
-
-		if (isset($id) && $a_cmd[$id])
-			$a_cmd[$id] = $_POST['command'];
-		else
-			$a_cmd[] = $_POST['command'];
-
-		write_config();
-
-		header("Location: system_rc.php");
-		exit;
+	}
+} else { // uuid not found
+	if ((PAGE_MODE_POST == $mode_page) || (PAGE_MODE_ADD == $mode_page)) { // POST or ADD
+		switch ($mode_updatenotify) {
+			case UPDATENOTIFY_MODE_UNKNOWN:
+				$mode_record = RECORD_NEW;
+				break;
+		}
 	}
 }
+if (RECORD_ERROR == $mode_record) { // oops, someone tries to cheat, over and out
+	header($sphere_header_parent);
+	exit;
+}
+
+if (PAGE_MODE_POST == $mode_page) { // We know POST is "Submit", already checked
+	unset($input_errors);
+
+	$sphere_record['enable'] = isset($_POST['enable']) ? true : false;
+	$sphere_record['protected'] = isset($_POST['protected']) ? true : false;
+	$sphere_record['name'] = $_POST['name'] ?? '';
+	$sphere_record['value'] = $_POST['value'] ?? '';
+	$sphere_record['comment'] = $_POST['comment'] ?? '';
+	$sphere_record['typeid'] = $_POST['typeid'] ?? '';
+
+	// Input validation.
+	$reqdfields = ['value', 'typeid'];
+	$reqdfieldsn = [gtext('Command'), gtext('Type')];
+	$reqdfieldst = ['string', 'string'];
+
+	do_input_validation($sphere_record, $reqdfields, $reqdfieldsn, $input_errors);
+	do_input_validation_type($sphere_record, $reqdfields, $reqdfieldsn, $reqdfieldst, $input_errors);
+
+	if ($prerequisites_ok && empty($input_errors)) {
+		if (RECORD_NEW == $mode_record) {
+			$sphere_array[] = $sphere_record;
+			updatenotify_set($sphere_notifier, UPDATENOTIFY_MODE_NEW, $sphere_record['uuid']);
+		} else {
+			$sphere_array[$index] = $sphere_record;
+			if (UPDATENOTIFY_MODE_UNKNOWN == $mode_updatenotify) {
+				updatenotify_set($sphere_notifier, UPDATENOTIFY_MODE_MODIFIED, $sphere_record['uuid']);
+			}
+		}
+		write_config();
+		header($sphere_header_parent);
+		exit;
+	}
+} else { // EDIT / ADD
+	switch ($mode_record) {
+		case RECORD_NEW:
+			$sphere_record['enable'] = true;
+			$sphere_record['protected'] = false;
+			$sphere_record['name'] = '';
+			$sphere_record['value'] = '';
+			$sphere_record['comment'] = '';
+			$sphere_record['typeid'] = '1';
+			break;
+		case RECORD_NEW_MODIFY:
+		case RECORD_MODIFY:
+			$sphere_record['enable'] = isset($sphere_array[$index]['enable']);
+			$sphere_record['protected'] = isset($sphere_array[$index]['protected']);
+			$sphere_record['name'] = trim($sphere_array[$index]['name']);
+			$sphere_record['value'] = $sphere_array[$index]['value'];
+			$sphere_record['comment'] = trim($sphere_array[$index]['comment']);
+			$sphere_record['typeid'] = $sphere_array[$index]['typeid'];
+			break;
+	}
+}
+
+$l_type = [
+	'1' => gtext('PreInit'),
+	'2' => gtext('PostInit'),
+	'3' => gtext('Shutdown')
+];
+
+$pgtitle = [gtext('System'), gtext('Advanced'), gtext('Command Scripts'), (RECORD_NEW !== $mode_record) ? gtext('Edit') : gtext('Add')];
 ?>
-<?php include("fbegin.inc");?>
-<table width="100%" border="0" cellpadding="0" cellspacing="0">
+<?php include 'fbegin.inc';?>
+<script type="text/javascript">
+//<![CDATA[
+$(window).on("load", function() {
+	// Init spinner onsubmit()
+	$("#iform").submit(function() { spinner(); });
+}); 
+//]]>
+</script>
+<table id="area_navigator">
 	<tr>
-    <td class="tabnavtbl">
-      <ul id="tabnav">
-      	<li class="tabinact"><a href="system_advanced.php"><span><?=gtext("Advanced");?></span></a></li>
-      	<li class="tabinact"><a href="system_email.php"><span><?=gtext("Email");?></span></a></li>
-      	<li class="tabinact"><a href="system_swap.php"><span><?=gtext("Swap");?></span></a></li>
-        <li class="tabact"><a href="system_rc.php" title="<?=gtext('Reload page');?>"><span><?=gtext("Command Scripts");?></span></a></li>
-        <li class="tabinact"><a href="system_cron.php"><span><?=gtext("Cron");?></span></a></li>
-		<li class="tabinact"><a href="system_loaderconf.php"><span><?=gtext("loader.conf");?></span></a></li>
-        <li class="tabinact"><a href="system_rcconf.php"><span><?=gtext("rc.conf");?></span></a></li>
-        <li class="tabinact"><a href="system_sysctl.php"><span><?=gtext("sysctl.conf");?></span></a></li>
-      </ul>
-    </td>
-  </tr>
-  <tr>
-    <td class="tabcont">
-			<form action="system_rc_edit.php" method="post" name="iform" id="iform" onsubmit="spinner()">
-				<?php if (!empty($input_errors)) print_input_errors($input_errors); ?>
-			  <table width="100%" border="0" cellpadding="6" cellspacing="0">
-					<?php html_inputbox("command", gtext("Command"), $pconfig['command'], gtext("The command to be executed."), true, 67);?>
-					<?php html_combobox("type", gtext("Type"), $pconfig['type'], array("PREINIT" => "PreInit", "POSTINIT" => "PostInit", "SHUTDOWN" => "Shutdown"), gtext("Execute command pre or post system initialization (booting) or before system shutdown."), true, isset($pconfig['type']));?>
-			  </table>
-				<div id="submit">
-					<input name="Submit" type="submit" class="formbtn" value="<?=(isset($id) && isset($type)) ? gtext("Save") : gtext("Add")?>" />
-					<input name="Cancel" type="submit" class="formbtn" value="<?=gtext("Cancel");?>" />
-					<?php if (isset($id) && isset($type)):?>
-					<input name="id" type="hidden" value="<?=$id;?>" />
-					<input name="type" type="hidden" value="<?=$type;?>" />
-					<?php endif;?>
-				</div>
-				<?php include("formend.inc");?>
-			</form>
-    </td>
-  </tr>
+		<td class="tabnavtbl">
+			<ul id="tabnav">
+				<li class="tabinact"><a href="system_advanced.php"><span><?=gtext('Advanced');?></span></a></li>
+				<li class="tabinact"><a href="system_email.php"><span><?=gtext('Email');?></span></a></li>
+				<li class="tabinact"><a href="system_swap.php"><span><?=gtext('Swap');?></span></a></li>
+				<li class="tabact"><a href="system_rc.php" title="<?=gtext('Reload page');?>"><span><?=gtext('Command Scripts');?></span></a></li>
+				<li class="tabinact"><a href="system_cron.php"><span><?=gtext('Cron');?></span></a></li>
+				<li class="tabinact"><a href="system_loaderconf.php"><span><?=gtext('loader.conf');?></span></a></li>
+				<li class="tabinact"><a href="system_rcconf.php"><span><?=gtext('rc.conf');?></span></a></li>
+				<li class="tabinact"><a href="system_sysctl.php"><span><?=gtext('sysctl.conf');?></span></a></li>
+			</ul>
+		</td>
+	</tr>
 </table>
-<?php include("fend.inc");?>
+<table id="area_data"><tbody><tr><td id="area_data_frame"><form action="<?=$sphere_scriptname;?>" method="post" name="iform" id="iform">
+	<?php
+		if (!empty($errormsg)) { print_error_box($errormsg); }
+		if (!empty($input_errors)) { print_input_errors($input_errors); }
+		if (file_exists($d_sysrebootreqd_path)) { print_info_box(get_std_save_message(0)); }
+	?>
+	<table id="area_data_settings">
+		<colgroup>
+			<col id="area_data_settings_col_tag">
+			<col id="area_data_settings_col_data">
+		</colgroup>
+		<thead>
+			<?php html_titleline2(gtext('Settings'));?>
+		</thead>
+		<tbody>
+			<?php
+				html_inputbox2('name', gtext('Name'), $sphere_record['name'], gtext('Enter a name for the command.'), false, 40);
+				html_inputbox2('value', gtext('Command'), $sphere_record['value'], gtext('The command to be executed.'), true, 60);
+				html_inputbox2('comment', gtext('Comment'), $sphere_record['comment'], gtext('Enter a description for your reference.'), false, 60);
+				html_combobox2('typeid', gtext('Type'), $sphere_record['typeid'], $l_type, gtext('Execute command pre or post system initialization (booting) or before system shutdown.'), true, isset($pconfig['type']));
+			?>
+		</tbody>
+	</table>
+	<div id="submit">
+		<input name="Submit" type="submit" class="formbtn" value="<?=($isrecordnew) ? gtext('Add') : gtext('Save');?>"/>
+		<input name="Cancel" type="submit" class="formbtn" value="<?=gtext('Cancel');?>"/>
+		<input name="uuid" type="hidden" value="<?=$sphere_record['uuid'];?>"/>
+	</div>
+	<?php include 'formend.inc';?>
+</form></td></tr></tbody></table>
+<?php include 'fend.inc';?>
